# Synclet

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.prod.yml  synclet.env
.github/workflows/: ci.yml  publish.yml
backend/: README.md  lint.sh  main.py  pyproject.toml
backend/common/: log_utils.py
backend/synclet/: config.py  fs_helpers.py  fuzzy.py  ignored.py  maint_cache.py  pending.py  plex.py  resolve.py  scan.py  state.py  sync_ops.py  synced.py  syncthing.py  watchlist.py  watchstate.py
backend/tests/: _http_mocks.py  conftest.py  test_api.py  test_fs_helpers.py  test_fuzzy.py  test_ignored.py  test_log_utils.py  test_maint_cache.py  test_pending.py  test_plex.py  test_resolve.py  test_scan.py  test_static_serve.py  test_sync_ops.py  test_syncthing.py  test_watchlist.py  test_watchstate.py
frontend/: .prettierignore  .prettierrc  README.md  eslint.config.cjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.eslint.json  vite.config.ts
frontend/src/: App.test.ts  App.vue  DetailDrawer.test.ts  EpisodeTile.test.ts  JobToasts.test.ts  MaintenanceView.test.ts  SyncedView.test.ts  SyncthingView.test.ts  WatchStateCoverageBanner.test.ts  api.ts  fuzzy.test.ts  fuzzy.ts  store.test.ts  store.ts  style.css  types.ts  vite-env.d.ts
frontend/src/components/: DetailDrawer.vue  EpisodeTile.vue  FilterBar.vue  HelloWorld.vue  JobToasts.vue  LinkPasteModal.vue  MaintenanceView.vue  SyncedView.vue  SyncthingView.vue  TabBar.vue  TitleCard.vue  TitleGrid.vue  TopBar.vue  WatchStateCoverageBanner.vue  WatchlistView.vue
